# kestrel

./: .gitignore  PLAN.md  README.md  package.json  setup.sh
ai-layer/: README.md  pyproject.toml
ai-layer/src/: __init__.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx
python/: README.md  requirements.txt
python/src/kestrel/: __init__.py
python/src/kestrel/ml/: __init__.py  processor.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: fs_commands.rs  mod.rs
src-tauri/src/macos/: filesystem.rs  mod.rs
